# matrix-malos-zwave

./: .drone.yml  README.md  matrix-creator-malos-zwave.service  matrix-malos-zwave.service
.drone/: slack.tpl
blob/: fpga_program.bash  system_zwave.bit  zwave_setup.bash
debian/: README.Debian  changelog  control  control.buster  matrix-creator-malos-zwave.install  matrix-malos-zwave.install  matrixio-malos-zwave.install  postinst  rules
scripts/: matrix-malos-zwave.service  matrixio-malos-zwave.service  matrixio-malos-zwave.sh
src/: CMakeLists.txt  driver_zwave.cpp  driver_zwave.h  malos_zigbee.cpp  malos_zwave.c  malos_zwave.cpp  tokenizer.c
src/js_test/: addnode.js  list.js  package.json  removenode.js  simpleTest.js  testBulb.js  test_driver_info.js  test_zwave_accel.js
src/tools/: CMakeLists.txt  zwave_json_gen.cpp  zwave_proto_gen.cpp
